Add main section

--- a/app/index.html
+++ b/app/index.html
@@ -21,16 +21,43 @@
                 <nav class="main-nav">
                     <ul class="main-nav__list">
                         <li class="main-nav__list-item"><a href="#" class="main-nav__list-item-link">О нас</a></li>
-                        <li class="main-nav__list-item"><a href="#" class="main-nav__list-item-link">Наши мастера</a></li>
-                        <li class="main-nav__list-item"><a href="#" class="main-nav__list-item-link">Наши работы</a></li>
+                        <li class="main-nav__list-item"><a href="#" class="main-nav__list-item-link">Наши мастера</a>
+                        </li>
+                        <li class="main-nav__list-item"><a href="#" class="main-nav__list-item-link">Наши работы</a>
+                        </li>
                         <li class="main-nav__list-item"><a href="#" class="main-nav__list-item-link">Отзывы</a></li>
                         <li class="main-nav__list-item"><a href="#" class="main-nav__list-item-link">Контакты</a></li>
                     </ul>
                 </nav>
 
+                <div class="address">
+                    <p class="address__text">10 микр. дом 15</p>
+                    <img class="address__img" src="images/map.png" alt="Map">
+                </div>
+                <div class="phone">
+                    <div class="phone-text">
+                        <a href="tel:+77478196454">+7(747)-819-64-54</a>
+                        <p class="phone-text-work">Каждый день с 9 до 18</p>
+                    </div>
+                    <img class="phone__img" src="images/phone.png" alt="phone">
+                </div>
             </div>
         </div>
     </header>
+    <div class="main">
+        <div class="container">
+            <div class="main__text">
+                <h2 class="main__text-title">Мужской Барбершоп в Алматы</h2>
+                <button class="book">Записаться</button>
+            </div>
+
+        </div>
+    </div>
+    <div class="services">
+        <div class="container">
+
+        </div>
+    </div>
 </div>
 
 
