--- a/app/index.html
+++ b/app/index.html
@@ -42,24 +42,33 @@
                     <img class="phone__img" src="images/phone.png" alt="phone">
                 </div>
             </div>
+            <div class="main">
+                <div class="main__text">
+                    <h2 class="main__text-title">Мужской Барбершоп в Алматы</h2>
+                    <button class="book">Записаться</button>
+                </div>
+
+            </div>
         </div>
     </header>
-    <div class="main">
-        <div class="container">
-            <div class="main__text">
-                <h2 class="main__text-title">Мужской Барбершоп в Алматы</h2>
-                <button class="book">Записаться</button>
-            </div>
 
-        </div>
-    </div>
     <div class="services">
         <div class="container">
-
+            <div class="services__inner">
+                <div class="sect">
+                    <img src="images/service1.png" alt="">
+                </div>
+                <div class="sect">
+                    <img src="images/service2.png" alt="">
+                </div>
+                <div class="sect">
+                    <img src="images/service3.png" alt="">
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
+.
 
 <script src="js/main.min.js"></script>
 </body>
